fix layout issue

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -6,14 +6,10 @@
 
 html {
   overflow-x: hidden;
-  overflow-y: scroll;
   scroll-behavior: smooth;
   font-size: 62.5%;
 }
 
-html.touch *:hover {
-  all: unset !important;
-}
 
 body {
   font-family: "Libre Franklin", sans-serif;
